--- a/CSS/css-flexbox_navigation/css/styles.css
+++ b/CSS/css-flexbox_navigation/css/styles.css
@@ -15,6 +15,12 @@ a {
 ul {
   list-style: none;
   padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  flex-wrap: wrap;
 }
 
 .header {
