--- a/CSS/css-flexbox_profile/css/styles.css
+++ b/CSS/css-flexbox_profile/css/styles.css
@@ -7,12 +7,17 @@ body {
   padding: 40px;
   margin: 0 auto;
   max-width: 1200px;
+
 }
+
 
 h2 {
   color: #3f0097;
 }
-
+.profile__image {
+  display: block;
+  margin: 0 auto;
+}
 .main__title {
   padding: 10px;
   background: #fddcd2;
@@ -30,6 +35,9 @@ h2 {
 .tech-stack__list {
   list-style: none;
   padding-left: 0;
+  display:flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .tech-stack__list-item {
@@ -37,4 +45,7 @@ h2 {
   background-color: #3f0097;
   color: #ffffff;
   border-radius: 10px;
+  margin: 10px;
+  flex-basis: calc(33.333% - 20px);
+  text-align: center;
 }
